test/fixtures/type-error/patternMatching.ro
fun matcher(x: i32): i32 =
  x match {
    case 1.5 -> 1
    else -> 2
  }
